[gd_scene load_steps=5 format=3 uid="uid://lhna0yd3a5ga"]

[ext_resource type="PackedScene" uid="uid://d3jgcjx4j6bxp" path="res://scenes/moving_entities/moving_entity.tscn" id="1_243le"]
[ext_resource type="Script" path="res://scenes/moving_entities/moving_enemy.gd" id="2_v6poe"]
[ext_resource type="PackedScene" uid="uid://5skmypop7gex" path="res://scenes/enemy_hit&hurt_boxes/enemy_hitbox.tscn" id="3_721eb"]
[ext_resource type="PackedScene" uid="uid://bqugv2m51o32n" path="res://scenes/enemy_hit&hurt_boxes/enemy_hurtbox.tscn" id="4_n5rdl"]

[node name="MovingEnemy" groups=["enemies"] instance=ExtResource("1_243le")]
script = ExtResource("2_v6poe")
damage_amount = 1

[node name="AnimatableBody2D" parent="." index="1"]
collision_layer = 8
collision_mask = 1

[node name="EnemyHitbox" parent="AnimatableBody2D" index="1" instance=ExtResource("3_721eb")]

[node name="EnemyHurtbox" parent="AnimatableBody2D" index="2" instance=ExtResource("4_n5rdl")]
